<resources>
    <string name="app_name">政务管理系统</string>
    <string name="app_name_cn">政务管理系统</string>
    <string name="title_topic">党建专题</string>
    <string name="title_news">时政新闻</string>
    <string name="title_news_clean">党风廉政</string>
    <string name="title_news_poverty">脱贫攻坚</string>
    <string name="title_news_education">党员教育</string>
    <string name="title_news_common">新闻</string>
    <string name="title_education1">主题教育</string>
    <string name="title_education2">工作动态</string>
    <string name="title_education3">重点培训</string>
    <string name="title_education4">党员干部现代远程教育</string>
    <string name="title_study_record">学习记录</string>
    <string name="title_study_courseware">学习课件</string>
    <string name="title_compulsory_course">必修课</string>
    <string name="title_party_knowledge">党建知识</string>
    <string name="title_party_history">壤塘党史</string>
    <string name="title_party_rules">党内法规</string>
    <string name="title_party_research">党建研究</string>
    <string name="title_volunteer_service">志愿服务</string>
    <string name="title_surrounding_community">周边社区</string>
    <string name="title_online_questionaire">在线问卷</string>
    <string name="title_online_vote">在线投票</string>
    <string name="title_my_donation">我的捐赠</string>
    <string name="title_all_donation">所有捐赠</string>
    <string name="title_donate">我要捐赠</string>
    <string name="title_my_receive">我领取的物品</string>
    <string name="title_wish_wall">心愿树</string>
    <string name="title_my_wish">我的心愿</string>
    <string name="title_my_receive_wish">我认领的心愿</string>
    <string name="title_party_member">党员风采</string>
    <string name="title_membership_credentials">组织关系</string>
    <string name="title_connection_transfer">关系转接</string>
    <string name="title_notepad">记事本</string>
    <string name="title_settings">设置</string>
    <string name="title_update_pwd">修改密码</string>
    <string name="title_update_info">修改信息</string>
    <string name="title_webview">详情</string>
    <string name="title_feedback">意见反馈</string>
    <string name="title_binding_mobile">绑定手机</string>
    <string name="title_signin">天天签到</string>
    <string name="title_grade_rank">成绩排行</string>
    <string name="title_news_detail">新闻详情</string>
    <string name="title_news_video_detail">新闻视讯详情</string>
    <string name="title_courses_detail">课程详情</string>
    <string name="title_courses_video_detail">课程视讯详情</string>
    <string name="title_comment">评论列表</string>
    <string name="title_register">注册</string>
    <string name="title_find_pwd">找回密码</string>
    <string name="title_get_vertify_code">获取验证码</string>
    <string name="title_set_pwd">设置密码</string>
    <string name="title_send_msg">发送私信</string>
    <string name="title_my_msg">我的私信</string>
    <string name="title_party_member_detail">党员详情</string>
    <string name="title_double_reporting">双报到</string>
    <string name="title_my_reporting">我的报到</string>
    <string name="title_vote_brief">活动简介</string>
    <string name="title_vote_result">投票结果</string>
    <string name="title_vote_entry_detail">我要投票</string>
    <string name="title_volunteer_service_detail">志愿服务详情</string>
    <string name="title_my_task">我的任务</string>
    <string name="title_wish_detail">心愿详情</string>
    <string name="title_my_join">我要参与</string>
    <string name="title_scores_details">正能量值明细</string>
    <string name="title_questionaire">问卷调查</string>
    <string name="title_organization">组织活动</string>
    <string name="title_report_community">报到社区</string>
    <string name="title_teacher_list">师资库</string>

    <!-- main tab -->
    <string name="tab_home">首页</string>
    <string name="tab_news">党建新闻</string>
    <string name="tab_study">我要学习</string>
    <string name="tab_join">我要参与</string>
    <string name="tab_mine">我的</string>

    <!-- iconfont -->
    <!-- tab -->
    <string name="ic_home">&#xe710;</string>
    <string name="ic_news">&#xe72f;</string>
    <string name="ic_study">&#xe65d;</string>
    <string name="ic_join">&#xe77a;</string>
    <string name="ic_mine">&#xe671;</string>
    <!-- home grid -->
    <string name="ic_home_grid_news">&#xe664;</string>
    <string name="ic_home_grid_education">&#xe64e;</string>
    <string name="ic_home_grid_clean">&#xe637;</string>
    <string name="ic_home_grid_poverty">&#xe641;</string>
    <string name="ic_home_grid_live">&#xe630;</string>
    <string name="ic_home_grid_map">&#xe61f;</string>
    <string name="ic_home_grid_enmergency">&#xe60a;</string>
    <string name="ic_home_grid_bigdata">&#xe639;</string>
    <!-- study header -->
    <string name="ic_study_record">&#xe65c;</string>
    <string name="ic_study_scores">&#xe77a;</string>
    <!-- study title -->
    <string name="ic_study_title">&#xe620;</string>
    <!-- mine column -->
    <string name="ic_mine_scores">&#xe663;</string>
    <string name="ic_mine_power">&#xe624;</string>
    <string name="ic_mine_rank">&#xe67d;</string>
    <!-- mine grid1 -->
    <string name="ic_mine_member">&#xe671;</string>
    <string name="ic_mine_membership">&#xe611;</string>
    <string name="ic_mine_work">&#xe60e;</string>
    <string name="ic_mine_notebook">&#xe614;</string>
    <!-- login edt -->
    <string name="ic_login_acc">&#xe6a2;</string>
    <string name="ic_login_pwd">&#xe616;</string>
    <!-- Join -->
    <string name="ic_join_my_wish">&#xe64c;</string>
    <string name="ic_join_my_receive_wish">&#xe64d;</string>
    <string name="ic_join_donate">&#xe674;</string>
    <string name="ic_join_my_donation">&#xe66b;</string>
    <string name="ic_join_my_receive">&#xe63a;</string>
    <string name="ic_join_all_receive">&#xe635;</string>
    <string name="ic_join_activity">&#xe618;</string>
    <!-- study course -->
    <string name="ic_study_course_best">&#xe6f4;</string><!-- 精品课件 -->
    <!-- mine btn -->
    <string name="ic_mine_sign_btn">&#xe8bb;</string>
    <!-- news_list video -->
    <string name="ic_news_video">&#xe793;</string>

    <!-- signin -->
    <string name="sign_rules_desc">\n
        1.签到1次可获得 1 积分\n
        2.连续签到2次可获得 2 积分\n
        3.连续签到3次可获得 3 积分\n
        4.连续签到4次可获得 4 积分\n
        5.连续签到5次可获得 5 积分\n
        6.连续签到6次可获得 6 积分\n
        7.连续签到7次可获得 10 积分\n
    </string>

    <!-- my_task -->
    <string name="my_task_rules_desc">
        1.首次使用首次使用APP+10 首次使用微信+5 群众完善微信+5\n
        2.新闻每条新闻首次评论+3 每条新闻首次分享+2\n
        3.公益活动每活动首次评论+2 参加小型活动+4 参加大型活动+5 每次捐助+10 每次帮助+8 每次调研+2\n
        4.党性首次必修课通过+5 首次效果测评通过+10\n
        5.课件或影像每条信息首次阅读+2 每条信息首次评论+3
    </string>

    <!-- register -->
    <string name="register_usercategory_info">党员、预备党员和积极分子同志无需注册，请直接用身份证号登陆。若无法登陆，请联系支部管理员添加账号。</string>

</resources>
