<?xml version="1.0" encoding="utf-8"?>
<!--
 * item_vlayout_mine_header.xml vlayout 通栏布局(我的头部)
 *
 * @author Fred_W
 * @version v1.0.0(1)
 *
 * @crdate 2018-5-25
 * @update
-->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:background="@mipmap/bg_mine_head"
    android:gravity="center_horizontal">

    <org.raphets.roundimageview.RoundImageView
        android:id="@+id/iv_header"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:src="@mipmap/ic_logo"
        app:border_width="4dp"
        app:border_color="#fc6366"
        app:leftBottom_corner_radius="0dp"
        app:leftTop_corner_radius="30dp"
        app:rightBottom_corner_radius="30dp"
        app:rightTop_corner_radius="0dp"
        app:type="circle"
        android:layout_alignParentLeft="true"
        android:layout_marginTop="@dimen/len_10"/>
    <!-- 名称 -->
    <TextView
        android:id="@+id/tv_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/font_16"
        android:textColor="@color/white"
        android:text="张三"
        android:gravity="center"
        android:layout_marginTop="@dimen/len_6"/>
    <!-- 所属党支部 -->
    <TextView
        android:id="@+id/tv_party_branch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/font_14"
        android:textColor="@color/white"
        android:text="xxxxxx党支部"
        android:gravity="center"
        android:layout_marginTop="@dimen/len_6"/>
    <!-- 天天签到 -->
    <!--<ImageView
        android:id="@+id/iv_sign"
        android:layout_width="@dimen/len_84"
        android:layout_height="wrap_content"
        android:src="@mipmap/ic_mine_sign"
        android:scaleType="fitCenter"/>-->

    <LinearLayout
        android:id="@+id/ll_btn_sign"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="@drawable/sp_bg_mine_btn_sign"
        android:gravity="center"
        android:layout_marginTop="@dimen/len_8">
        <com.mytv.rtzhdj.mvp.ui.widget.IconView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ic_mine_sign_btn"
            android:textColor="@color/white"
            android:textSize="@dimen/font_20"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/font_14"
            android:textColor="@color/white"
            android:text="天天签到"
            android:gravity="center"
            android:layout_marginLeft="@dimen/len_4"/>
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="@dimen/len_40">
        <!-- 学习积分 -->
        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="54dp"
            android:layout_weight="1">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_centerHorizontal="true"
                android:gravity="center">
                <com.mytv.rtzhdj.mvp.ui.widget.IconView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/ic_mine_scores"
                    android:textColor="@color/colorAccent"
                    android:textSize="@dimen/len_20"
                    android:gravity="center"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/font_16"
                    android:textColor="@color/colorAccent"
                    android:text="累计积分"
                    android:layout_alignParentRight="true"/>
            </LinearLayout>
            <TextView
                android:id="@+id/tv_study_scores"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="@dimen/font_24"
                android:textColor="@color/white"
                android:text="123"
                android:gravity="center"
                android:layout_alignParentBottom="true"/>
        </RelativeLayout>
        <!-- 学习积分 -->
        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="54dp"
            android:layout_weight="1">
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_centerHorizontal="true"
                android:gravity="center">
                <com.mytv.rtzhdj.mvp.ui.widget.IconView
                    android:id="@+id/ic_scores"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/ic_mine_power"
                    android:textColor="@color/colorAccent"
                    android:textSize="@dimen/len_20"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/font_16"
                    android:textColor="@color/colorAccent"
                    android:text="正能量值"
                    android:layout_alignParentRight="true"/>
            </LinearLayout>
            <TextView
                android:id="@+id/tv_power_num"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="@dimen/font_24"
                android:textColor="@color/white"
                android:text="123"
                android:gravity="center"
                android:layout_alignParentBottom="true"/>
        </RelativeLayout>
        <!-- 学习积分 -->
        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="54dp"
            android:layout_weight="1">
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_centerHorizontal="true"
                android:gravity="center">
                <com.mytv.rtzhdj.mvp.ui.widget.IconView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/ic_mine_rank"
                    android:textColor="@color/colorAccent"
                    android:textSize="@dimen/len_20"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/font_16"
                    android:textColor="@color/colorAccent"
                    android:text="全市排名"
                    android:layout_alignParentRight="true"/>
            </LinearLayout>
            <TextView
                android:id="@+id/tv_grade_rank"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="@dimen/font_24"
                android:textColor="@color/white"
                android:text="123"
                android:gravity="center"
                android:layout_alignParentBottom="true"/>
        </RelativeLayout>
    </LinearLayout>


    
</LinearLayout>
